tests/fixtures/effect-compiler/errors/EFX2600.effect
CCEffect %{
  techniques:
  - passes:
    - vert: vs:test
      frag: fs:test
}%

CCProgram vs %{
  precision mediump float;
  layout(location = 0) in vec3 a_position;
  layout(location = 0) in vec3 a_normal;
  vec4 test () {}
}%

CCProgram fs %{
  precision mediump float;
  vec4 test () {}
}%
